--- a/style.css
+++ b/style.css
@@ -19,6 +19,18 @@ h3 {
 /* Header */
 header {
   text-align: center;
+  display: flex;
+  margin: 15px 115px;
+}
+
+header h1 {
+  flex: 1;
+  margin: 10px;
+}
+
+header nav {
+  flex: 1;
+  margin: 20px 5px;
 }
 
 /* Containers */
