added flex to about section, commented out for later

--- a/style.css
+++ b/style.css
@@ -23,17 +23,20 @@ h3 {
 header {
   text-align: center;
   display: flex;
-  margin: 15px 115px;
+  margin: 15px 75px;
+  width: 750px;
+  align-content: center;
 }
 
 header h1 {
   flex: 1;
-  margin: 10px;
+  margin: 10px 5px 10px 20px;
 }
 
 header nav {
   flex: 1;
-  margin: 20px 5px;
+  margin: 20px 15px 20px 5px;
+  width: 300px;
 }
 
 /* Containers */
@@ -51,7 +54,15 @@ article div {
   text-align: center;
   width: 100%;
 }
+/* editing out flex for about until later
+#about {
+  display: flex;
+}
 
+#about img {
+  align-items: left;
+}
+*/
 /* Paragraphs */
 p {
   line-height: 1.5;
