--- a/style.css
+++ b/style.css
@@ -67,6 +67,11 @@ article div {
   text-align: left;
 }
 
+.port-art {
+  display: flex;
+  font-size: 14px;
+}
+
 /* Paragraphs */
 p {
   line-height: 1.5;
@@ -84,6 +89,7 @@ a:hover {
 nav a {
   padding-left: 20px;
 }
+
 
 /* Images */
 img {
